# riker

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: check.yml
docs/: interval-list-format.md  riker-record-buf-plan.md
riker_derive/: Cargo.toml
riker_derive/src/: lib.rs
scripts/: compare_picard.py
src/: collector.rs  counter.rs  fasta.rs  intervals.rs  lib.rs  main.rs  math.rs  metrics.rs  overlapper.rs  plotting.rs  progress.rs  sequence_dict.rs  simd.rs  vcf.rs  version.rs
src/commands/: alignment.rs  basic.rs  command.rs  common.rs  docs.rs  error.rs  gcbias.rs  hybcap.rs  isize.rs  mod.rs  multi.rs  wgs.rs
src/sam/: alignment_reader.rs  indexed_reader.rs  mate_buffer.rs  mod.rs  overlap_clipper.rs  pair_orientation.rs  record_utils.rs  riker_record.rs  simd_seq.rs
tests/: test_alignment.rs  test_bam_reader.rs  test_basic.rs  test_docs.rs  test_error.rs  test_fasta.rs  test_gcbias.rs  test_hybcap.rs  test_isize.rs  test_multi.rs  test_wgs.rs
tests/helpers/: mod.rs
