[workspace]
members = [".", "riker_derive"]

[package]
name = "riker-ngs"
version = "0.1.0"
authors = ["Tim Fennell <tim@fulcrumgenomics.com>"]
description = "Fast Rust CLI toolkit for sequencing QC metrics"
repository = "https://github.com/fulcrumgenomics/riker"
homepage = "https://github.com/fulcrumgenomics/riker"
license = "MIT"
edition = "2024"
rust-version = "1.94.0" # minimum supported; toolchain pinned to stable

[lib]
name = "riker_lib"
path = "src/lib.rs"

[[bin]]
name = "riker"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help", "unicode"] }
enum_dispatch = "0.3"
noodles = { version = "0.109", features = ["bam", "bcf", "cram", "fasta", "sam", "bgzf", "core", "vcf", "csi", "tabix"] }
noodles-bgzf = { version = "0.46", features = ["libdeflate"] }
bgzf = "0.3"
serde = { version = "1", features = ["derive"] }
csv = "1"
anyhow = "1"
bstr = "1"
chrono = "0.4"
bitvec = "1"
flate2 = { version = "1", features = ["zlib-ng"], default-features = false }
rustc-hash = "2"
log = "0"
env_logger = "0.11"
rpmalloc = "0.2"
riker_derive = { package = "riker-ngs-derive", version = "0.1.0", path = "riker_derive" }
num-traits = "0.2"
rust-lapper = "1"
smallvec = "1"
strum = { version = "0.28", features = ["derive"] }
kuva = { version = "0.1.6", features = ["pdf"] }
wide = "1.3"
crossbeam-channel = "0.5"
bytemuck = "1.25"

[dev-dependencies]
tempfile = "3"
approx = "0.5"

[build-dependencies]
built = "0"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

# Release packaging profile used by `cargo multivers` (x86_64) and `cargo
# build --profile dist` (aarch64). Identical codegen to `release` but with
# incremental off so multivers' delta-compression across variants is
# deterministic. Profiles can't carry rustflags on stable Rust, so the
# per-variant `-C target-cpu=...` is provided by `cargo multivers` itself
# via the metadata table below.
[profile.dist]
inherits = "release"
incremental = false

# x86_64 release binaries are packaged with `cargo multivers` into a single
# launcher that embeds the variants below and dispatches to the highest
# match at startup. Variants:
#   - x86-64    : SSE2 baseline, runs on any 64-bit x86 CPU (2003+)
#   - x86-64-v2 : SSE4.2 + POPCNT (~2008+); captures most modern codegen wins
#   - x86-64-v4 : AVX-512 (current-gen Xeon / EPYC)
#
# v3 is omitted to match chelae's measurements: on similar streaming
# bioinformatics workloads they found v3's auto-vectorization gains over
# v2 small enough not to earn the variant slot. We have NOT independently
# benchmarked v2/v3/v4 on riker -- our wgs measurements only compared the
# default release build (effectively v1) against `target-cpu=native` on a
# Granite Rapids (=v4) host (~4% gap). If a future bench shows v3 buys
# something on riker specifically, add it here.
#
# Build invocation (release / bioconda recipes must branch on host arch):
#   x86_64 : cargo multivers --profile dist
#   aarch64: cargo build --profile dist   (single portable ARMv8-A binary)
#
# Do NOT run `cargo multivers` on aarch64. cargo-multivers only auto-limits
# its CPU list to the v1-v4 microarchitecture levels on x86_64; on every
# other arch it defaults to "all CPUs known to rustc" (76+ on aarch64),
# which would attempt that many full release builds with negligible payoff
# -- our wgs benchmarks on Graviton 4 showed `target-cpu=native` within
# noise of generic ARMv8-A. The cargo-multivers project also notes that
# only x86_64 is tested.
[package.metadata.multivers.x86_64]
cpus = ["x86-64", "x86-64-v2", "x86-64-v4"]

# Profile that matches release perf closely but keeps symbol + line info for
# samply/perf. Use via `cargo build --profile bench-prof`.
#
# `lto = false` overrides the release default of `thin` LTO: thin LTO reorders
# and merges function bodies across crates so aggressively that sampled PCs
# land inside address ranges belonging to unrelated symbols (we observed e.g.
# wgs/noodles hot loops showing up as `aho_corasick::...::build_from_noncontiguous`
# when symbolicating with atos). Disabling LTO here keeps the symbol table
# honest at a modest perf cost — a few percent in our measurements — which is
# well worth it for readable flamegraphs.
#
# `debug = 2` gives full DWARF (files + line numbers + inline info) rather than
# the minimal `debug = 1` symbol table, which makes atos / samply / Firefox
# Profiler attribute samples to the right source line inside generic / inlined
# functions.
[profile.bench-prof]
inherits = "release"
lto = false
debug = 2
strip = false
